Major start refactor
Moved shaders to own lib to isolate the shader compiling.

Setup ImGui cmake.

Started refactor of osystem by making class.
Startd BGFX refactor into a single handle.

Will start getting the copy pasta from examples culled down.

--- a/Fitd/CMakeLists.txt
+++ b/Fitd/CMakeLists.txt
@@ -30,15 +30,6 @@ endif()
 
 source_group("src" FILES ${SRC_ROOT})
 
-set( CMAKE_EXE_LINKER_FLAGS_SHIPPING "${CMAKE_EXE_LINKER_FLAGS_RELWITHDEBINFO} /LTCG /OPT:ICF /OPT:REF /SUBSYSTEM:WINDOWS /DEBUG" )
-
 add_executable (Fitd ${SOURCES})
 
-TARGET_LINK_LIBRARIES(Fitd SDL2main SDL2-static soloud FitdLib bgfx zlibstatic ${EXTRA_LIBS})
-
-set_target_properties(Fitd PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/data/AITD1_CD")
-set_target_properties(Fitd PROPERTIES WIN32_EXECUTABLE FALSE)
-
-set_property( DIRECTORY PROPERTY VS_STARTUP_PROJECT Fitd)
-
-
+TARGET_LINK_LIBRARIES(Fitd FitdLib)
