--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ FetchContent_Declare(glm GIT_REPOSITORY https://github.com/g-truc/glm.git GIT_TA
 FetchContent_Declare(iconfontheader GIT_REPOSITORY https://github.com/juliettef/IconFontCppHeaders.git GIT_TAG main)
 FetchContent_Declare(plog GIT_REPOSITORY https://github.com/SergiusTheBest/plog)
 FetchContent_Declare(SDL GIT_REPOSITORY https://github.com/libsdl-org/SDL GIT_TAG main)
+FetchContent_Declare(SDL_Mixer GIT_REPOSITORY https://github.com/libsdl-org/SDL_Mixer GIT_TAG main)
 FetchContent_Declare(soloud GIT_REPOSITORY https://github.com/jarikomppa/soloud.git GIT_TAG master)
 FetchContent_Declare(zlib GIT_REPOSITORY https://github.com/madler/zlib.git GIT_TAG master)
 
@@ -38,6 +39,7 @@ FetchContent_MakeAvailable(iconfontheader)
 FetchContent_MakeAvailable(nanosigslot)
 FetchContent_MakeAvailable(plog)
 FetchContent_MakeAvailable(SDL)
+FetchContent_MakeAvailable(SDL_Mixer)
 FetchContent_MakeAvailable(zlib)
 
 add_subdirectory( deps/imgui )
