--- a/pak/CMakeLists.txt
+++ b/pak/CMakeLists.txt
@@ -15,6 +15,7 @@ set(AITD1
     AITD/ITD_RESS.h
     AITD/AITD.cpp
     AITD/AITD.h
+    AITD/samples.h
     )
 
 add_executable (pak
@@ -36,6 +37,8 @@ add_executable (pak
     introScene.cpp
     introScene.h
     main.cpp
+    music.cpp
+    music.h
     osystem.cpp
     osystem.h
     pakFile.cpp
@@ -51,4 +54,4 @@ add_executable (pak
     )
 
 target_include_directories(pak PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/AITD ${nanosigslot_SOURCE_DIR})
-target_link_libraries(pak bgfx bx glm imgui plog SDL3::SDL3 SDL3_mixer::SDL3_mixer zlib)
+target_link_libraries(pak ADLMIDI bgfx bx glm imgui magic_enum plog SDL3::SDL3 SDL3_mixer::SDL3_mixer zlib)
