--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,30 +19,33 @@ set(SDL_SHARED TRUE CACHE BOOL "Build a SDL shared library (if available)")
 set(SDL_STATIC TRUE CACHE BOOL "Build a SDL static library (if available)")
 
 set(BGFX_OPENGL_VERSION 46)
+
+FetchContent_Declare(adlibmidi GIT_REPOSITORY https://github.com/Wohlstand/libADLMIDI.git GIT_TAG master)
 FetchContent_Declare(bgfx GIT_REPOSITORY https://github.com/bkaradzic/bgfx.cmake.git GIT_TAG master)
 FetchContent_Declare(glm GIT_REPOSITORY https://github.com/g-truc/glm.git GIT_TAG master)
 FetchContent_Declare(iconfontheader GIT_REPOSITORY https://github.com/juliettef/IconFontCppHeaders.git GIT_TAG main)
+FetchContent_Declare(magic_enum GIT_REPOSITORY https://github.com/Neargye/magic_enum.git GIT_TAG master)
 FetchContent_Declare(plog GIT_REPOSITORY https://github.com/SergiusTheBest/plog)
 FetchContent_Declare(SDL GIT_REPOSITORY https://github.com/libsdl-org/SDL GIT_TAG main)
-FetchContent_Declare(SDL_Mixer GIT_REPOSITORY https://github.com/libsdl-org/SDL_Mixer GIT_TAG main)
+FetchContent_Declare(SDL_mixer GIT_REPOSITORY https://github.com/libsdl-org/SDL_Mixer GIT_TAG main)
 FetchContent_Declare(soloud GIT_REPOSITORY https://github.com/jarikomppa/soloud.git GIT_TAG master)
 FetchContent_Declare(zlib GIT_REPOSITORY https://github.com/madler/zlib.git GIT_TAG master)
-
 FetchContent_Declare(nanosigslot GIT_REPOSITORY https://github.com/NoAvailableAlias/nano-signal-slot
   CONFIGURE_COMMAND ""
   BUILD_COMMAND ""
     )
 
+FetchContent_MakeAvailable(adlibmidi)
 FetchContent_MakeAvailable(bgfx)
 FetchContent_MakeAvailable(glm)
 FetchContent_MakeAvailable(iconfontheader)
+FetchContent_MakeAvailable(magic_enum)
 FetchContent_MakeAvailable(nanosigslot)
 FetchContent_MakeAvailable(plog)
 FetchContent_MakeAvailable(SDL)
-FetchContent_MakeAvailable(SDL_Mixer)
+add_subdirectory( deps/imgui )
+
+FetchContent_MakeAvailable(SDL_mixer)
 FetchContent_MakeAvailable(zlib)
 
-add_subdirectory( deps/imgui )
-add_subdirectory( FitdLib )
-add_subdirectory( Fitd )
 add_subdirectory( pak )
