--- a/deps/imgui/CMakeLists.txt
+++ b/deps/imgui/CMakeLists.txt
@@ -25,6 +25,8 @@ add_library(imgui
 
   ${SRC}/backends/imgui_impl_sdl3.h
   ${SRC}/backends/imgui_impl_sdl3.cpp
+  ${SRC}/backends/imgui_impl_sdlrenderer3.h
+  ${SRC}/backends/imgui_impl_sdlrenderer3.cpp
 )
 
 target_link_libraries(imgui PUBLIC SDL3::SDL3)
