Working Adlib playback
Tested INDARK1 JACK INDARK2

--- a/adlibInTheDark/CMakeLists.txt
+++ b/adlibInTheDark/CMakeLists.txt
@@ -1,4 +1,10 @@
 
+IF(LINUX)
+add_definitions(-DAUDIO_DRIVER="alsa")
+ELSEIF(WIN32)
+add_definitions(-DAUDIO_DRIVER="dsound")
+ENDIF()
+
 add_executable (adlibInTheDark
     main.cpp
     )
